public/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --primary-color: #380872;
}

body {
  font-family: 'Poppins', sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #333;
  width: 100vw;
  background: rgb(3, 3, 3);
  height: 100dvh;
}

/* Navbar */
.navbar {
  background: #d59de3d4;
  color: #fff;
  padding: 1rem;
  display: flex;
  width: 100vw;
  justify-content: space-between;
  align-items: center;
}

.navbar ul {
  list-style: none;
  display: flex;
}


.navbar a {
  color: #fff;
  text-decoration: none;
  font-size: 1.2rem;
}

.navbar a:hover {
  color: var(--primary-color);
}

/* Showcase */
.showcase {
  margin-top: 50px;
  border-radius: 24px;
  height: 50vh;
  font-size: 12px;
  width: 70vw;
  background: var(--primary-color);
}

.showcase h1 {
  font-size: 3vw;
  color: #cacaca;
  text-align: center;
  padding: 1rem 0;
}

.showcase form {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100%;
  width: 100%;
}

.showcase form input,
form select {
  font-size: 2vw;
  width: 60vw;
  padding: 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
  margin-bottom: 1em;
}

form button {
  font-size: 20px;
  padding: 1rem 2rem;
  border: none;
  border-radius: 5px;
  background: #333;
  color: #fff;
  cursor: pointer;
  margin-top: 20px;
}

form button:hover {
  transform: scale(1.1);
}

/* Image */

.image {
  min-width: 50vw;
  height: 80vh;
  display: none;
}

.image-container{
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

img {
  display: block;
  margin: auto;
}

.msg {
  font-size: 1.6rem;
  text-align: center;
  margin-top: 1rem;
  color: #fff;
}

main{
  display: flex;
  height: 100vh;
  width: 100vw;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 30px;
}

